general page redesign and implementing ToDo section

--- a/WebContent/WEB-INF/templates/includes/footer.html
+++ b/WebContent/WEB-INF/templates/includes/footer.html
@@ -1,15 +1,15 @@
+<head>
+	<style>
+	
+	p {	color:white; 
+		text-align:center;}
+	}
+	</style>
+	
+</head>
+
 <nav th:fragment="footer" class="navbar navbar-inverse navbar-fixed-bottom">
 	<div class="container-fluid" >
-          <form class="navbar-form navbar-center"><p>&copy; 2018 Die Eierbären</p></form>
+          <form class="navbar-form navbar-center"><p style="color:white;">&copy; 2018 Die Eierbären</p></form>
     </div>
 </nav>
-
-<style>
-.navbar-center
-{
-    position: absolute;
-    width: 100%;
-    text-align: center;
-    margin: auto;
-}
-</style>
