--- a/WebContent/WEB-INF/templates/editTodo.html
+++ b/WebContent/WEB-INF/templates/editTodo.html
@@ -4,7 +4,9 @@
 
 <head>
 <div th:include="~{includes/bootstrap :: bootstrapMeta}" th:remove="tag" />
-<title>EDIT TODO's</title>
+
+<title>Edit Grocery</title>
+
 <div th:include="~{includes/bootstrap :: bootstrapCSS}" th:remove="tag" />
 <link
 	href="http://www.malot.fr/bootstrap-datetimepicker/bootstrap-datetimepicker/css/bootstrap-datetimepicker.css"
@@ -16,41 +18,63 @@
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
 				<form class="form-horizontal" method="post"
-					th:action="${todo} ? @{/changeTodo(id=${todo.id})} : @{/createNewTodo}">
+					th:action="${todo} ? @{/changeTodo(id=${todo.id})} : @{/addTodo}">
 					<!--<input type="hidden" th:name="${_csrf.parameterName}"
 						th:value="${_csrf.token}" />-->
 					<fieldset>
 						<legend th:text="${todo}? 'Change Todo' : 'New Todo'">New
 							Todo</legend>
 
-						<!-- --------------  Name ---------------- 
+						<!-- --------------  Name ---------------- -->
 						<div class="form-group">
 							<label for="todoName" class="col-md-2 control-label">
-								TodoName </label>
+								Name </label>
 							<div class="col-md-10">
-								<input class="form-control" id="todoName" type="text"
-									name="todoName" th:value="${todo} ? ${todo.todoName}">
+								<input class="form-control" type="text" name="todoName"
+									th:value="${todo} ? ${todo.todoName}">
 							</div>
 						</div>
-						
-						
-						<div class="form-group">
-							<label for="inputAvailable" class="col-md-2 control-label">Bought
-							</label>
-							<div class="col-md-10">
-								<input th:checked="${todo} ? ${tod.bought}"
-									id="boughtstate" class=form-control type="checkbox"
-									name="boughtstate">
-							</div>
-						</div>
-							-->
 
-											
+				<!-- --------------  Category ---------------- -->
+						<div class="form-group">
+							<label for="todoCategory" class="col-md-2 control-label">
+								Category </label>
+							<div class="col-md-10">
+								<select>
+								<option class="form-control" type="text" name="todoCategory"
+									th:value="${todo} ? ${todo.todoCategory}">Appointment</option>
+								<option class="form-control" type="text" name="todoCategory"
+								th:value="${todo} ? ${todo.todoCategory}">Cleaning</option>
+								
+								<option class="form-control" type="text" name="todoCategory"
+								th:value="${todo} ? ${todo.todoCategory}">Housekeeping</option>
+							
+								<option class="form-control" type="text" name="todoCategory"
+								th:value="${todo} ? ${todo.todoCategory}">Party</option>
+							
+							</select>
+							</div>
+						</div>
+						
+						
+
+
+				<!-- --------------  Date ---------------- -->
+						<div class="form-group">
+							<label for="todoDate" class="col-md-2 control-label">
+								Date </label>
+							<div class="col-md-10">
+								<input class="form-control" type="date" name="todoDate"
+									th:value="${todo} ? ${todo.todoDate}">
+							</div>
+						</div>
+
+
 						<!-- --------------  buttons ---------------- -->
 						<div class="form-group">
 							<div class="col-md-10 col-md-offset-2">
 								<button type="submit" class="btn btn-primary">Submit</button>
-								<a th:action="createNewGroceryItem" class="btn btn-default"> Cancel </a>
+								<a href="listTodos" class="btn btn-default"> Cancel </a>
 							</div>
 						</div>
 
