--- a/WebContent/WEB-INF/templates/listUsers.html
+++ b/WebContent/WEB-INF/templates/listUsers.html
@@ -8,10 +8,11 @@
 <div th:replace="~{includes/bootstrap :: bootstrapCSS}" />
 </head>
 <body>
-	<div class="container" role="main">
+	<div class="container-fluid" role="main">
 
 		<div class="page-header">
-			<h1>COMMUNE-IC8</h1>
+			<h1 align="center">Users</h1>
+			<nav th:replace="~{includes/searchNav :: search}"></nav>
 		</div>
 
 		<!--  Error message ----------------------------------------------------------- -->
@@ -30,19 +31,24 @@
 			class="alert alert-success" role="warning"></div>
 		<!--   message ----------------------------------------------------------- -->
 
-		<nav th:replace="~{includes/searchNav :: search}"></nav>
+		
+		
+		<!--  Menu ----------------------------------------------------------- -->
+		<div class="col-sm-1">
+		
+			<div th:replace="~{includes/menu :: menu}"></div>
+		
+		</div>
+		<!--  Menu ----------------------------------------------------------- -->
+
 		
 	
 		
 
-		<!--  1 simple button ----------------------------------------------------------- -->
-		<div class="row"></div>
-		<!--  1 simple button ----------------------------------------------------------- -->
-
-
+		
 
 		<!-- Right Dynamic Content------------------------------------------------------- -->
-		<div class="col-sm-12">
+		<div class="col-md-10 col-md-offset-1">
 
 			<table data-toggle="table" class="table table-striped">
 				<thead>
@@ -70,7 +76,7 @@
 						<td th:text="${user.lastname}"></td>
 						<td th:text="${user.mobilenumber}"></td>
 						<td th:text="${user.email}"></td>
-						<!--<td th:text="${#calendars.format(user.birthdate,'dd.MM.yyyy')}"></td>-->
+						<!--<td th:text="${#calendars.format(user.birthdate,'dd.MM.yyyy')}"></td>
 						<!-- <td><a sec:authorize="hasRole('ADMIN')" th:href="@{/delete(id=${employee.id})}">Delete</a></td> -->
 						<td><span th:if="${user.picture != null}"> <a
 								th:href="@{download(documentId=${user.image.id})}"
