--- a/WebContent/WEB-INF/templates/includes/menu.html
+++ b/WebContent/WEB-INF/templates/includes/menu.html
@@ -1,7 +1,7 @@
 <div th:fragment="menu">
 
 
-	<div class="card bg-secondary text-white">
+	<div class="card bg-secondary text-white" style="background-color:grey; width:150%;">
 		<div class="card-header">
 			<h2>Menu</h2>
 		</div>
