--- a/WebContent/WEB-INF/templates/listComments.html
+++ b/WebContent/WEB-INF/templates/listComments.html
@@ -31,10 +31,12 @@
 			class="alert alert-success" role="warning"></div>
 		<!--   message ----------------------------------------------------------- -->
 
-		
+		<!-- Menu------------------------------------------------------------------ -->
 		<div class="col-sm-1">
 			<div th:replace="~{includes/menu :: menu}"></div>
 		</div>
+		<!-- Menu------------------------------------------------------------------ -->
+		
 		
 		<!--  Edit Grocery----------------------------------------------------------- -->
 		<div class="col-md-2 col-md-offset-1">
