--- a/WebContent/WEB-INF/templates/editTodo.html
+++ b/WebContent/WEB-INF/templates/editTodo.html
@@ -40,14 +40,13 @@
 							<label for="todoCategory" class="col-md-2 control-label">
 								Category </label>
 							<div class="col-md-10">
+								
 								<select>
-  									<option th:value="${todo} ? ${todo.todoCategory}" th:text="Appointment"> Appointment</option>
-  									<option th:value="${todoCategory}" th:text="Cleaning"> Cleaning</option>
-  									<option th:value="${todoCategory}" th:text="Housekeeping"> Housekeeping</option>
-  									<option th:value="${todoCategory}" th:text="Party"> Party</option>
-  									<option th:value="${todoCategory}" th:text="Other"> Other</option>
+									<option th:text="Appointment" th:value="Appointment">Appointment</option>
+								
+								
 								</select>
-						
+								
 							</div>
 						</div>
 						
