--- a/WebContent/WEB-INF/templates/listUsers.html
+++ b/WebContent/WEB-INF/templates/listUsers.html
@@ -41,9 +41,9 @@
 		</div>
 		<!--  Menu ----------------------------------------------------------- -->
 
-<<<<<<< HEAD
+
 		<!--  1 simple button ----------------------------------------------------------- -->
-		<div class="row">
+		<div class="col-md-2 col-md-offset-1">
 		<form sec:authorize="hasRole('ADMIN')" th:action="@{/editUser}"
 				method="post">
 				<input class="btn btn-default" type="submit" value="Add new User" />
@@ -51,11 +51,6 @@
 		</div>
 		<!--  1 simple button ----------------------------------------------------------- -->
 
-=======
-		
-	
-		
->>>>>>> 21f64e902b55f239775051c8165a72dc5aa32399
 
 		
 
