--- a/WebContent/WEB-INF/templates/listGrocery.html
+++ b/WebContent/WEB-INF/templates/listGrocery.html
@@ -36,20 +36,22 @@
 			<div th:replace="~{includes/menu :: menu}"></div>
 		</div>
 
+		
 		<!--  Edit Grocery----------------------------------------------------------- -->
 		<div class="col-md-2 col-md-offset-1">
 
 			<form sec:authorize="hasRole('USER')" th:action="@{/editGrocery}"
-				method="post">
+				method="post" style="float: left;">
 				<input class="btn btn-default" type="submit" value="Add Grocery" />
 			</form>
-			<form th:action="@{/report}" method="post">
+			<form th:action="@{/report}" method="post" style="float: left;">
 				<input class="btn btn-default" type="submit" value="PDF">
 			</form>
 		</div>
 		<!--  Edit Grocery----------------------------------------------------------- -->
 
-
+		
+		
 
 
 		<div class="col-md-10 col-md-offset-1">
@@ -66,6 +68,8 @@
 
 					</tr>
 				</thead>
+
+		
 
 
 				<tbody>
