added FlatDao, FlatControlle

--- a/WebContent/WEB-INF/templates/listFlat.html
+++ b/WebContent/WEB-INF/templates/listFlat.html
@@ -1,12 +1,97 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+<div th:replace="~{includes/bootstrap :: bootstrapMeta}" />
+<title>COMMUNE-IC8</title>
+<div th:replace="~{includes/bootstrap :: bootstrapCSS}" />
 </head>
 <body>
+	<div class="container-fluid" role="main">
 
-<h1>LIST FLAT</h1>
+		<div class="page-header">
+			<h1 align="center">Flat</h1>
+			<nav th:replace="~{includes/searchNav :: search}"></nav>
+		</div>
 
+		<!--  Error message ----------------------------------------------------------- -->
+		<div th:unless="${errorMessage} == null" th:utext="${errorMessage}"
+			class="alert alert-danger" role="alert"></div>
+		<!--  Error message ----------------------------------------------------------- -->
+
+		<!--  Warning message ----------------------------------------------------------- -->
+		<div th:unless="${warningMessage} == null"
+			th:utext="${warningMessage}" class="alert alert-warning"
+			role="warning"></div>
+		<!--  Warning message ----------------------------------------------------------- -->
+
+		<!--   message ----------------------------------------------------------- -->
+		<div th:unless="${message} == null" th:utext="${message}"
+			class="alert alert-success" role="warning"></div>
+		<!--   message ----------------------------------------------------------- -->
+
+		
+		
+		<!--  Menu ----------------------------------------------------------- -->
+		<div class="col-sm-1">
+		
+			<div th:replace="~{includes/menu :: menu}"></div>
+		
+		</div>
+		<!--  Menu ----------------------------------------------------------- -->
+
+
+		<!--  1 simple button ----------------------------------------------------------- -->
+		<div class="col-md-2 col-md-offset-1">
+		<form sec:authorize="hasRole('ADMIN')" th:action="@{/editUser}"
+				method="post">
+				<input class="btn btn-default" type="submit" value="Add new Flat" />
+			</form>
+		</div>
+		<!--  1 simple button ----------------------------------------------------------- -->
+
+
+		
+
+		<!-- Right Dynamic Content------------------------------------------------------- -->
+		<div class="col-md-10 col-md-offset-1">
+
+			<table data-toggle="table" class="table table-striped">
+				<thead>
+					<tr>
+						<th>Name</th>
+						
+					
+						<th>Users</th>
+						<th>Cleanplan</th>
+						
+
+					</tr>
+				</thead>
+				<tbody>
+					<!--  list all items ----------------------------------------------------------- -->
+					<tr th:each="flat : ${flats}">
+						<td th:text="${flat.name}"></td>
+						
+						
+						<td th:text="${flat.users}"></td>
+						<td th:text="${flat.cleanplan}"></td>
+
+					</tr>
+					<!--  list all items ----------------------------------------------------------- -->
+				</tbody>
+			</table>
+
+		</div>
+		<!-- Right Dynamic Content------------------------------------------------------- -->
+	</div>
+	
+	
+	
+	</div>
+	<!--  End of container -->
+	<div th:replace="~{includes/bootstrap :: bootstrapJS}" />
+	<div th:replace="~{includes/footer :: footer}" />
 </body>
 </html>
