--- a/WebContent/WEB-INF/templates/editUser.html
+++ b/WebContent/WEB-INF/templates/editUser.html
@@ -79,17 +79,10 @@
 
 						<!-- UserRole  -->
 						<div>
-							<form method="post" action="find">
-								<div class="form-group">
-									<label class="col-md-2 control-label">User Role</label>
-									<div class="col-md-10">
-										<select id="searchType" class="form-control" name="searchType">
-											<option selected="selected">User</option>
-											<option>Admin</option>
-										</select>
-									</div>
-								</div>
-							</form>
+						<label class="col-md-2 control-label"> User Role </label>
+							<div class="col-md-10">
+						<input type="checkbox" name = "Admin">
+						
 						</div>
 <!--
 						<!-- --------------  dayOfBirth ---------------- 
