--- a/WebContent/WEB-INF/templates/includes/menu.html
+++ b/WebContent/WEB-INF/templates/includes/menu.html
@@ -9,33 +9,33 @@
 		<div class="card-body">
 
 			<ul class="list-group list-group-flush">
-				<li class="list-group-item"><form 
+				<li class="list-group-item" style="background-color:#1C1C1C;"><form 
 						th:action="@{/showGroceryList}" method="post">
-						<input type="submit" value="Grocery" style="color: black;" />
+						<input id="liste" type="submit" value="Grocery" style="color: white; border-style:none; background-color:transparent;" />
 					</form></li>
-				<li class="list-group-item"><form th:action="@{/listComments}"
+				<li class="list-group-item" style="background-color:#1C1C1C;"><form th:action="@{/listComments}"
 						method="post">
-						<input type="submit" value="Comments" style="color: black;" />
+						<input id="liste" type="submit" value="Comments" style="color: white; border-style:none; background-color:transparent;" />
 					</form></li>
-				<li class="list-group-item"><form th:action="@{/listTodos}"
+				<li class="list-group-item" style="background-color:#1C1C1C;"><form th:action="@{/listTodos}"
 						method="post">
-						<input type="submit" value="To-Do's" style="color: black;" />
+						<input id="liste" type="submit" value="To-Do's" style="color: white; border-style:none; background-color:transparent;" />
 					</form></li>
 
 
 			<!-- -------------------------- UsersLists -->
 
-				<li class="list-group-item"><form th:action="@{/listUsers}"
+				<li class="list-group-item" style="background-color:#1C1C1C;"><form th:action="@{/listUsers}"
 						method="post">
-						<input type="submit" value="Users" style="color: black;" />
+						<input type="submit" value="Users" style="color: white; border-style:none; background-color:transparent;" />
 					</form></li>
 
 
 				<!-- -------------------------- FlatLists -->
 
-				<li class="list-group-item"><form th:action="@{/listFlat}"
+				<li class="list-group-item" style="background-color:#1C1C1C;"><form th:action="@{/listFlat}"
 						method="post">
-						<input type="submit" value="Flat" style="color: black;" />
+						<input type="submit" value="Flat" style="color: white; border-style:none; background-color:transparent;" />
 					</form></li>
 			</ul>
 
