--- a/WebContent/WEB-INF/templates/uploadFile.html
+++ b/WebContent/WEB-INF/templates/uploadFile.html
@@ -27,7 +27,7 @@
 						<div class="form-group">
 							<div class="col-md-10 col-md-offset-2">
 								<button type="submit" class="btn btn-primary">Upload</button>
-								<a href="list">
+								<a th:href="listUsers">
 									<button type="button" class="btn btn-default">Cancel</button>
 								</a>
 							</div>
