--- a/WebContent/WEB-INF/templates/listUsers.html
+++ b/WebContent/WEB-INF/templates/listUsers.html
@@ -92,8 +92,12 @@
 								<button type="button" class="btn btn-xs btn-success">
 									<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
 									Upload
-								</button>
-						</a></td>
+								</button></a>
+								<a sec:authorize="hasRole('ADMIN')" th:href="@{/deleteUser(id=${user.id})}"><button type="button" class="btn btn-xs btn-danger">
+									<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+									Delete
+								</button></a>
+						</td>
 
 
 
