--- a/WebContent/WEB-INF/templates/listUsers.html
+++ b/WebContent/WEB-INF/templates/listUsers.html
@@ -67,6 +67,7 @@
 						<th>Last Name</th>
 						<th>Mobile Number</th>
 						<th>E-Mail</th>
+						<th>DoB</th>						
 						<th>User Picture</th>
 						<th>Action</th>
 
@@ -82,6 +83,8 @@
 						<td th:text="${user.lastname}"></td>
 						<td th:text="${user.mobilenumber}"></td>
 						<td th:text="${user.email}"></td>
+						<td th:text="${#dates.format(user.birthdate,'dd.MM.yyyy')}"></td>
+						
 
 						<!-- <td><a sec:authorize="hasRole('ADMIN')" th:href="@{/delete(id=${employee.id})}">Delete</a></td> -->
 						<td><span th:if="${user.userimage != null}"> <a
