--- a/WebContent/WEB-INF/templates/uploadFile.html
+++ b/WebContent/WEB-INF/templates/uploadFile.html
@@ -12,7 +12,8 @@
 
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
-				<form class="form-horizontal" enctype="multipart/form-data" method="post" th:action="@{/upload(${_csrf.parameterName}=${_csrf.token})}">
+				<form class="form-horizontal" enctype="multipart/form-data" method="post" 
+				th:action="@{/upload(${_csrf.parameterName}=${_csrf.token})}">
 					<fieldset>
 						<legend th:text="'Upload Image for user ' + ${firstname} + ' ' + ${lastname}"></legend>
 
